Footer problem and spacing problem solve , uestion update on 16/02/2019

--- a/css/custom.css
+++ b/css/custom.css
@@ -554,13 +554,13 @@ video#bgvid:hover{
 
 }
 
-@media only screen and (min-width: 761px) and (max-width: 991px) {
+/*@media only screen and (min-width: 761px) and (max-width: 991px) {
     
     .ads, .ads2{
         display:none
     }  
     
-}
+}*/
 @media only screen and (min-width: 250px) and (max-width: 767px) { 
 /*    .roll{
         display:none;
@@ -579,6 +579,17 @@ video#bgvid:hover{
         font-size: 25px;
         padding:10px;
 }
+
+
+.footer{
+    height: 100px;
+    padding:15px 5px;
+    margin-top: 15px;
+}
+.ads{
+    margin-top: 10px;
+}
+
 }
 
 
